Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-11932

TextEdit with no color property defined is drawn with wrong color

    XMLWordPrintable

Details

    • 5500ffeeaee3412272f0f4af844fbc1d4d78a3bb

    Description

      TextEdit internally uses QTextControl to draw text, which follows the platform style. If no color has been defined, TextEdit text color follow platform style, when it should by default be painted to black like text in TextInput and Text elements.

      For example, on Symbian TextElement is painted with white, blue, whatever is defined in the Symbian theme file. In Meego for Notebooks, TextElement is painted with gray.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jpetrell Joona Petrell
            jpetrell Joona Petrell
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes