Fix TextEdit with no color property defined is drawn with wrong color

Task-number: QTBUG-11932
Reviewed-by: Martin Jones